# USDTgVerse

./: .env.quantum  .gitignore  404.html  50x.html  ADVANCED_FEATURES_ANALYSIS.md  AKTIVASYON_PLANI_TURKCE.md  ALL_PLATFORMS_OPENED.md  API_KEYS_QUICK_GUIDE.md  CMakeLists.txt  COMPLETE_ECOSYSTEM_SUMMARY.md  COMPLETE_SYSTEM_AUDIT_REPORT.md  COMPREHENSIVE_ECOSYSTEM_ANALYSIS.md  COMPREHENSIVE_SOCIAL_STRATEGY.md  DEPLOYMENT_STATUS.md  ECOSYSTEM_EVALUATION_REPORT.html  ECOSYSTEM_SECURITY_FUNCTIONALITY_ANALYSIS.md  ENTERPRISE_DASHBOARDS_COMPLETE.md  ENTERPRISE_FEATURES_COMPLETE.md  ENTERPRISE_FEATURES_SUCCESS.md  FINAL_COMPREHENSIVE_SYSTEM.md  FINAL_SOCIAL_MEDIA_SYSTEM.md  FINAL_SYSTEM_STATUS.md  GECKOTERMINAL_CEX_INTEGRATION.md  HEADER_COMMENTS_UPDATE_REPORT.md  INTERNAL_SECURITY_AUDIT_REPORT.md  LICENSE  LIQUIDITY_MINING_PROGRAM.md  LIVE_DEPLOYMENT_GUIDE.md  MARKETING_EMERGENCY_PLAN.md  Makefile  NEXT_LEVEL_IMPROVEMENTS.md  PLATFORM_EXPANSION_GUIDE.md  PURE_C_EXTENSIONS_PERFORMANCE.md  QUICK_START_GUIDE.md  README.md  README_SOCIAL_BOT.md  REGILIS_INTEGRATION_REPORT.md  RGLS_BACKEND_INTEGRATION_COMPLETE.md  Regilis_contract.c  SIFIR_MALIYETLI_AKTIVASYON_PLANI.md  (+130 more)
..quantum/: ADVANCED_FEATURES_ANALYSIS.md.quantum  ALL_PLATFORMS_OPENED.md.quantum  API_KEYS_QUICK_GUIDE.md.quantum  CMakeLists.txt.quantum  COMPLETE_ECOSYSTEM_SUMMARY.md.quantum  COMPLETE_SYSTEM_AUDIT_REPORT.md.quantum  COMPREHENSIVE_ECOSYSTEM_ANALYSIS.md.quantum  COMPREHENSIVE_SOCIAL_STRATEGY.md.quantum  DEPLOYMENT_STATUS.md.quantum  ECOSYSTEM_EVALUATION_REPORT.html.quantum  ENTERPRISE_DASHBOARDS_COMPLETE.md.quantum  ENTERPRISE_FEATURES_COMPLETE.md.quantum  ENTERPRISE_FEATURES_SUCCESS.md.quantum  FINAL_COMPREHENSIVE_SYSTEM.md.quantum  FINAL_SOCIAL_MEDIA_SYSTEM.md.quantum  FINAL_SYSTEM_STATUS.md.quantum  GECKOTERMINAL_CEX_INTEGRATION.md.quantum  HEADER_COMMENTS_UPDATE_REPORT.md.quantum  LICENSE.quantum  LIQUIDITY_MINING_PROGRAM.md.quantum  LIVE_DEPLOYMENT_GUIDE.md.quantum  MARKETING_EMERGENCY_PLAN.md.quantum  Makefile.quantum  NEXT_LEVEL_IMPROVEMENTS.md.quantum  PLATFORM_EXPANSION_GUIDE.md.quantum  PURE_C_EXTENSIONS_PERFORMANCE.md.quantum  QUICK_START_GUIDE.md.quantum  README.md.quantum  README_SOCIAL_BOT.md.quantum  REGILIS_INTEGRATION_REPORT.md.quantum  RGLS_BACKEND_INTEGRATION_COMPLETE.md.quantum  Regilis_contract.c.quantum  SOCIAL_MEDIA_CAMPAIGN.md.quantum  SOCIAL_MEDIA_SYSTEM_COMPLETE.md.quantum  SYNTAX_CHECK_COMPLETE.md.quantum  SYNTAX_FIX_REPORT.md.quantum  SYSTEM_ANALYSIS_REPORT.md.quantum  TODAY_ACHIEVEMENTS.md.quantum  USDTGVERSE_DEVELOPMENT_CHECKLIST.md.quantum  USDTG_DISTRIBUTION_STRATEGY.md.quantum  (+113 more)
account-abstraction/: AccountAbstraction.usdtg
account-abstraction-system/: Makefile  dashboard.html
admin/: strategic-roadmap-2030.html
ai-assistant/: QuantumAI.cpp
ai-contract-assistant-system/: Makefile
airdrop-system/: Makefile  README.md  airdrop_api_server  airdrop_api_server.c  airdrop_manager.c  airdrop_manager.h
analytics/: AdvancedAnalytics.cpp  extended_social_analytics.json  social_media_analytics.json
api/: Makefile  blockchain_api  blockchain_api.cpp  dashboard_data.json  gateway.c  live_data_service  live_data_service.c  price-service.js  production_api_pure_c  production_api_pure_c.c  static_price_updater  static_price_updater.c  wallet_data.json
audit/: AUDIT_SUMMARY.md  AUDIT_SUMMARY_FIXED.md  Makefile  README.md  USDTgVerse_Security_Audit_Report.html  USDTgVerse_Security_Audit_Report_FIXED.html  audit_api_c_native  audit_api_c_native.c  audit_api_real_production  audit_api_real_production.c  contract-verify.html  dashboard.html  generate_audit_report  generate_audit_report.cpp  generate_fixed_report  generate_fixed_report.cpp  improved_audit_report.html  manual_audit_report.html  security_audit  security_audit.cpp  security_audit_fixed  security_audit_fixed.cpp
audit-system-pure-c/: audit_api_c_native  audit_api_c_native.c  audit_api_real_production.c
backup-nonc-files/: app.py
bonus-system/: Makefile  README.md  bonus_api_server  bonus_api_server.c  bonus_manager.c  bonus_manager.h
bootstrap-system/: BOOTSTRAP_STRATEGY.md  MultiSigGateway.sol  USDTgBootstrapBridge.usdtg  bridge.html
bridge/: multi-chain-bridge.html
bridge-system/: bridge_api_server  bridge_api_server_pure_c.c
bridges/: README.md  arbitrum_bridge  avalanche_bridge  bnb_bridge  bridge_orchestrator  bridge_orchestrator.c  eth_bridge  master_bridge_orchestrator.c  master_orchestrator  optimism_bridge  polygon_bridge  solana_bridge  tron_bridge
compliance/: EnterpriseCompliance.cpp
components/: navigation-dashboard.html  navigation-main.html  navigation.html
contracts/: RGLSStablecoin.sol  USDTgDeployment.js  USDTgG_contract.sol  USDTgNativeCoin.sol  USDTgV.sol  USDTgV_contract.sol  USDTg_contract.sol  env.example  hardhat.config.js  package.json
dashboard/: Makefile  auto_update.sh  dashboard_data_updater  dashboard_data_updater.c  index.html  script.js  styles.css
database/: complete_database_system.c  complete_system_database.c  complete_system_db  pure_c_database.c  pure_c_db  simple_complete_db.c  usdtgverse_database.c
depin/: DePINInfrastructure.cpp
deploy/: fra1_monitoring_setup.sh  nyc3_primary_setup.sh  production_deploy.sh  sfo2_bridge_setup.sh
dev-tools/: USDTgIDE-Pro.html  USDTgIDE-Real.html  USDTgIDE.html
digital-brother-manifesto/: README.md  manifesto_en.md  styles.css
docs/: DEPLOYMENT_STRATEGY_ANALYSIS.md  GRAFANA_MONITORING_TUTORIAL.md  PHASE3_IMMEDIATE_ANALYSIS.md  QUANTUM_ADDRESS_STANDARD.md  QUANTUM_SECURITY_CONSISTENCY.md  ULTRA_SECURITY_ROADMAP.md  comprehensive-guide.html
enhanced-governance-dao-system/: Makefile
enterprise/: EnterpriseIntegration.cpp  dark-pool-dashboard.html
exchanges/: README.md
explorer/: usdtgscan.html
flash-loans/: FlashLoans.usdtg  (+1 more)
sdk/c/: CMakeLists.txt
sdk/c/examples/: wallet_example.c
sdk/c/include/: usdtgverse.h
sdk/c/src/: usdtgverse.c
usdtgverse-qt-ide/: CMakeLists.txt
usdtgverse-qt-ide/src/: main.cpp
usdtgverse-qt-ide/src/Core/: USDTgVerseIDE.cpp  USDTgVerseIDE.h
usdtgverse-qt-ide/src/Editor/: CodeEditor.h
(+492 files in other folders)
